force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/Custom_Rating_Rollup_Batch_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Custom Rating Rollup Batch Settings</label>
</CustomObject>