force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Aggregate_Result_Field__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Result_Field__c</fullName>
    <inlineHelpText>This value is the API name of the field used for determining the rating values applied to the custom rating field specified in the object in the global settings above. Values in this field are used as-is if &quot;Use Rollup Batch for Rollup Field&quot; is unchecked in Global Settings.Or if that custom setting is checked this field is populated with values by an additional batch process in the application that runs first to set the values as per the logic in these Rollup Batch Settings.Can be a single std/Cust field</inlineHelpText>
    <label>Aggregate Result Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>