force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <inlineHelpText>This value is required if the rollup batch is active and is the API name of the object where Rollup values are pulled from. Can also be the same as the Parent Object or another standard or custom object related to the Parent Object. i.e. Opportunity or Project__c</inlineHelpText>
    <label>Child Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>