force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Field_to_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Aggregate__c</fullName>
    <inlineHelpText>This value is required if the rollup batch is active and is the field used in the batch process to calculate the rollup criteria. Currently, only Id for a count of child object records is supported with future releases expected to include sum or other functions for calculations of field values on child object records. Default and only currently permitted value for record count operation is: Id</inlineHelpText>
    <label>Field to Aggregate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>