force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>Value is the API name of the custom rating object specified in Global Settings the the primary batch process is updating the values and applying the rating per the logic specified in that custom settings. Can be a single standard or custom object. i.e. Account or Project__c</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>