force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <inlineHelpText>This value is required if the rollup batch is active and is the API name of the field on the child object that is the standard or custom lookup or master-detail field relating it to the parent object. i.e. AccountId or Account__c</inlineHelpText>
    <label>Relationship Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>