force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Relationship_field_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_Criteria__c</fullName>
    <inlineHelpText>This value is required if the rollup batch is active and is the SOQL query criteria used to determine what parent object records should be updated by the rollup batch process. Can be the same as the Global Settings Rating Criteria or a different set of parent records as required. i.e. Type !=&apos;Prospect&apos; AND RecordType.Name = &apos;Customer&apos;</inlineHelpText>
    <label>Relationship Field Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>