force-app/main/default/objects/Custom_Rating_Rollup_Batch_Settings__c/fields/Rollup_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Criteria__c</fullName>
    <inlineHelpText>This value is required if the rollup batch is active and is the SOQL query value limiting child object records used in the batch process to calculate the count of child object records to Rollup to the Aggregate Result Field. Use API Names of the field and the appropriate logical operators. i.e. CreatedDate = LAST_N_DAYS:90</inlineHelpText>
    <label>Rollup Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>